--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,24 @@
 
     <color name="title_background">#ff355689</color>
     <color name="title_separator">#40ffffff</color>
+
+
+
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="green">#0fc874</color>
+    <color name="dark_green">#0ca15c</color>
+    <color name="colorGray">#d7d7d7</color>
+    <color name="colorLightGray">#eeeeee</color>
+    <color name="colorDarkGray">#646464</color>
+    <color name="colorGray_light">#CDCDCD</color>
+    <color name="colorGreyLight">#4DCCCCCC</color>
+    <color name="vividCerise">#da1d81</color>
+    <color name="smokyBlack">#100c08</color>
+
+
 </resources>
